--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
+    "body-parser": "^1.13.3",
     "express": "^4.10.2",
     "socket.io": "^1.3.6"
   }
